2010-09-16  Kinuko Yasuda  <kinuko@chromium.org>

        Reviewed by Ojan Vafai.

        Include detailed test modifiers (e.g. FLAKY) in results.json for failing non-layout tests
        https://bugs.webkit.org/show_bug.cgi?id=45408

        This change also tries to remove duplicated upload_results_json methods
        in run_webkit_tests.py and json_results_generator.py.

        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator.py:
        * Scripts/webkitpy/layout_tests/layout_package/json_results_generator_unittest.py:
        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:

2010-09-16  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] When switching views (WebViewGraphicsBased <--> WebViewTraditional), QWebPage signals and QActions have to be re-set.

        Recently r67554 changed the way different views use the WebPage class: it was previously being shared between
        different views, but now for each view switch, a new WebPage class is constructed and set. Signals and QAction's
        were not being set to the new WebPage though. Patch fix that, by re constructing the toolbar, and then re-hooking
        all page specific stuff to the UI.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::initializeView):
        * QtTestBrowser/mainwindow.cpp:
        (MainWindow::MainWindow):
        (MainWindow::buildUI):
        (MainWindow::setPage):
        * QtTestBrowser/mainwindow.h:

2010-09-12  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Andreas Kling.

        Make all accesses to m_item (GraphicsWebView) done by WebViewGraphicsBased class happen though graphicsWebView getter method.

        This patch is mostly a preparation for another commit, where the ownership of the m_item/GraphicsWebView
        object will move to the qgraphicsscene instead of the qgraphicsview.

        * QtTestBrowser/webview.cpp:
        (WebViewGraphicsBased::setPage):