@@ -3703,6 +3703,11 @@ class WebKitStyleTest(CppStyleTestBase):
         self.assert_lint('void QTFrame::qt_drt_is_awesome(int var1, int var2)', '')
         self.assert_lint('void qt_drt_is_awesome(int var1, int var2);', '')
 
+        # Cairo forward-declarations should not be a failure.
+        self.assert_lint('typedef struct _cairo cairo_t;', '')
+        self.assert_lint('typedef struct _cairo_surface cairo_surface_t;', '')
+        self.assert_lint('typedef struct _cairo_scaled_font cairo_scaled_font_t;', '')
+
         # NPAPI functions that start with NPN_, NPP_ or NP_ are allowed.
         self.assert_lint('void NPN_Status(NPP, const char*)', '')
         self.assert_lint('NPError NPP_SetWindow(NPP instance, NPWindow *window)', '')
